Revert "Reduce PMD violations (no suppressions) (#641)"
This reverts commit a881c90f442134729ea93d3c9e61d0757114fadd.